# traefik-docker-http-provider-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml
src/: docker.rs  dynamic_configuration.rs  lib.rs  main.rs
tests/docker/: docker-compose.yml
