[package]
name = "traefik-docker-http-provider-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace"] }
serde_json = "1.0.111"
tracing = "0.1.40"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
url = {version = "2.5.0", features = ["serde"]}
bollard = "0.15.0"
regex = "1.10.2"
itertools = "0.12.0"
lazy_static = "1.4.0"

[dev-dependencies]
rstest = "0.18.2"
assertables = "7.0.1"
